Fix docker tags

--- a/.github/workflows/build_image.yml
+++ b/.github/workflows/build_image.yml
@@ -127,4 +127,4 @@ jobs:
           context: .
           platforms: linux/amd64,linux/arm64
           push: ${{ github.ref == 'refs/heads/main' }}
-          tags: "${{ env.DOCKER_REPO }}:${{ steps.read_version.outputs.VERSION }},${{ env.DOCKER_REPO }}:latest"
+          tags: "${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_REPO }}:${{ steps.read_version.outputs.VERSION }},${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_REPO }}:latest"
